--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
     ></script>
     <title>Welcome to DevCircle!</title>
   </head>
-  <body>
+  <body class="font-body">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
