--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,6 +16,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/3cd8087034.js"
       crossorigin="anonymous"
