--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,7 +24,7 @@
       src="https://kit.fontawesome.com/3cd8087034.js"
       crossorigin="anonymous"
     ></script>
-    <title>Welcome to DevCircle!</title>
+    <title>TRAYN | Weightlift Progress Tracker</title>
   </head>
   <body class="font-body bg-indigo-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
